--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -13,12 +13,14 @@
     {
       "cell_type": "markdown",
       "id": "db2edc7a",
-      "metadata": {},
+      "metadata": {
+        "id": "db2edc7a"
+      },
       "source": [
         "## EDA – Importance and Meaning\n",
         "\n",
         "Exploratory Data Analysis (EDA) is the process of **getting to know your dataset** before applying advanced models or drawing conclusions.  \n",
-        "It is a critical first step in any data analysis workflow because it helps you:\n",
+        "It is a critical step in any data analysis workflow (after initial acquisition, cleaning and preparation) because it helps you:\n",
         "\n",
         "- **Understand structure**: Identify variable types (numerical, categorical, date, text) and the shape of the dataset.  \n",
         "- **Detect issues**: Spot missing values, inconsistencies, and potential data quality problems.  \n",
@@ -33,7 +35,9 @@
     {
       "cell_type": "markdown",
       "id": "2549b7d9",
-      "metadata": {},
+      "metadata": {
+        "id": "2549b7d9"
+      },
       "source": [
         "## Titanic – The Story We Know\n",
         "\n",
@@ -62,8 +66,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Seaborn – Statistical Data Visualization in Python\n",
+        "\n",
+        "[Seaborn](https://seaborn.pydata.org/) is a Python library built on top of **matplotlib** that makes it easier to create clear, attractive, and informative statistical visualizations.  \n",
+        "It comes with **high-level functions** for common plot types such as histograms, scatterplots, boxplots, heatmaps, and regression plots, while handling details like color palettes and axis formatting automatically.  \n",
+        "\n",
+        "In this course, we use Seaborn to:\n",
+        "- Quickly explore **distributions** (age, fare)  \n",
+        "- Compare **categories** (survival by sex, class)  \n",
+        "- Visualize **correlations** (heatmaps of numerical features)  \n",
+        "- Highlight **outliers and patterns** in the Titanic dataset  \n",
+        "\n",
+        "### Seaborn in Google Colab\n",
+        "Google Colab includes Seaborn **pre-installed**, so you can simply import and use it without setup:\n",
+        "\n",
+        "```python\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n"
+      ],
+      "metadata": {
+        "id": "-HEjmSeQl051"
+      },
+      "id": "-HEjmSeQl051"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "772e07ba",
       "metadata": {
         "colab": {
@@ -513,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "ad963e3b",
       "metadata": {
         "colab": {
@@ -562,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "716f2d08",
       "metadata": {
         "colab": {
@@ -610,14 +640,14 @@
         "* skewness - a measure of asymmetry in a distribution (positive = right tail, negative = left tail)\n",
         "* kurtosis - a measure of the \"tailedness\" of a distribution (high kurtosis = heavy tails, low kurtosis = light tails)\n",
         "\n",
-        "More on formulas for these on wiki: \n",
+        "More on formulas for these on wiki:\n",
         "* https://en.wikipedia.org/wiki/Skewness\n",
         "* https://en.wikipedia.org/wiki/Kurtosis\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "b590fd58",
       "metadata": {
         "colab": {
@@ -645,7 +675,9 @@
     {
       "cell_type": "markdown",
       "id": "bf28350c",
-      "metadata": {},
+      "metadata": {
+        "id": "bf28350c"
+      },
       "source": [
         "### Interpretation of Skewness and Kurtosis\n",
         "- **Skewness**: A skewness value greater than 0 indicates a right-skewed distribution, while a value less than 0 indicates a left-skewed distribution. A value close to 0 suggests a symmetric distribution.\n",
@@ -655,7 +687,9 @@
     {
       "cell_type": "markdown",
       "id": "172dcd4a",
-      "metadata": {},
+      "metadata": {
+        "id": "172dcd4a"
+      },
       "source": [
         "### Descriptive Statistics versus Visualizations\n",
         "\n",
@@ -669,7 +703,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f6dd810f",
-      "metadata": {},
+      "metadata": {
+        "id": "f6dd810f"
+      },
       "outputs": [],
       "source": []
     },
@@ -698,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "b36b1cd4",
       "metadata": {
         "colab": {
@@ -739,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "90fb57a1",
       "metadata": {
         "colab": {
@@ -780,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b99f68ef",
       "metadata": {
         "colab": {
@@ -831,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "2dcdd51f",
       "metadata": {
         "colab": {
@@ -876,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "eccf8bfd",
       "metadata": {
         "colab": {
@@ -919,7 +955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "cd0a922e",
       "metadata": {
         "colab": {
@@ -966,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "7c8bbba6",
       "metadata": {
         "colab": {
@@ -1029,7 +1065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7dd1e3fb",
       "metadata": {
         "colab": {
@@ -1338,7 +1374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "513625c5",
       "metadata": {
         "colab": {
@@ -1469,7 +1505,9 @@
     {
       "cell_type": "markdown",
       "id": "0e409b4e",
-      "metadata": {},
+      "metadata": {
+        "id": "0e409b4e"
+      },
       "source": [
         "### 7. Chi-Squared Test for Categorical Variables\n",
         "\n",
