--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -7,7 +7,9 @@
         "id": "85ee0e25"
       },
       "source": [
-        "# 📅 Day 3 — Exploratory Data Analysis (EDA)\n"
+        "# 📅 Day 3 — Exploratory Data Analysis (EDA)\n",
+        "\n",
+        "![EDA](https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/icons/EDA.png?raw=true)"
       ]
     },
     {
@@ -573,6 +575,29 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Mean, Median, Mode – When to Use Which?\n",
+        "\n",
+        "When analyzing data, the **mean**, **median**, and **mode** are three key measures of central tendency. Each highlights a different aspect of the \"typical\" value in a dataset, and each has strengths and weaknesses depending on the context.\n",
+        "\n",
+        "- **Mean (average)** is best when the data is **continuous, symmetric, and free of extreme outliers**. For example, the average age of Titanic passengers gives a good sense of the general group, but it would be skewed if just a few passengers had extremely high ages recorded incorrectly.  \n",
+        "- **Median (middle value)** is preferred when data is **skewed or contains outliers**, because it is more robust. In the Titanic dataset, the **median fare** is much lower than the mean fare, since a few wealthy first-class passengers paid disproportionately high prices.  \n",
+        "- **Mode (most frequent value)** is especially useful for **categorical or discrete data**. For instance, the mode of `embarked` tells us the most common port of departure, or the mode of `pclass` reveals the most common travel class. For numerical data, mode is less often used unless the data is heavily discrete (e.g., number of siblings).\n",
+        "\n",
+        "In practice:\n",
+        "- Use the **mean** for normally distributed data without large outliers.  \n",
+        "- Use the **median** when distributions are skewed or when robustness is needed.  \n",
+        "- Use the **mode** when dealing with categorical or discrete variables where frequency matters.  \n",
+        "\n",
+        "Together, these three measures provide a more complete picture of a dataset’s central tendency than any one measure alone.\n"
+      ],
+      "metadata": {
+        "id": "jy6Lompqm423"
+      },
+      "id": "jy6Lompqm423"
+    },
+    {
+      "cell_type": "markdown",
       "id": "96808805",
       "metadata": {
         "id": "96808805"
@@ -623,6 +648,31 @@
         "print(\"Fare quartiles:\")\n",
         "print(titanic['fare'].describe()[4:7])\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Measures of Spread: Variance, Standard Deviation, Quartiles – When to Use Which?\n",
+        "\n",
+        "While measures of central tendency tell us the \"typical\" value, **measures of spread** describe how much the data varies. They show whether the values are tightly clustered or widely dispersed. The three most common measures are **variance**, **standard deviation**, and **quartiles**.\n",
+        "\n",
+        "- **Variance** measures the *average squared deviation* from the mean. It is mathematically important in statistics and probability theory, especially in advanced modeling. However, because it is expressed in squared units (e.g., age²), it is less intuitive to interpret directly.  \n",
+        "\n",
+        "- **Standard Deviation (SD)** is the square root of variance and is expressed in the same units as the data. This makes it much easier to interpret. A low SD means the data points are close to the mean, while a high SD indicates more spread. For Titanic, the **standard deviation of fare** shows how widely ticket prices varied among passengers.  \n",
+        "\n",
+        "- **Quartiles and Interquartile Range (IQR)** divide the dataset into four equal parts. Q1 is the 25th percentile, Q2 is the median, and Q3 is the 75th percentile. The **IQR (Q3 – Q1)** captures the middle 50% of data, making it very robust against outliers. On Titanic, quartiles are useful for understanding the distribution of fares across different classes, where extreme values (luxury fares) would distort the mean and SD.\n",
+        "\n",
+        "### When to Use Which?\n",
+        "- Use **variance** in theoretical or mathematical contexts, especially when working with probability distributions or regression models.  \n",
+        "- Use **standard deviation** when you need a practical, intuitive measure of spread in the same units as your data.  \n",
+        "- Use **quartiles and IQR** when data is skewed or has outliers, as they provide a resistant summary of distribution.  \n",
+        "\n",
+        "In practice, analysts often report both **median + IQR** (robust view) and **mean + SD** (classical view) to give a balanced picture of spread.\n"
+      ],
+      "metadata": {
+        "id": "gKzkjDoBnOKo"
+      },
+      "id": "gKzkjDoBnOKo"
     },
     {
       "cell_type": "markdown",
@@ -683,6 +733,37 @@
         "- **Skewness**: A skewness value greater than 0 indicates a right-skewed distribution, while a value less than 0 indicates a left-skewed distribution. A value close to 0 suggests a symmetric distribution.\n",
         "- **Kurtosis**: A kurtosis value greater than 3 indicates a distribution with heavier tails than a normal distribution (leptokurtic), while a value less than 3 indicates lighter tails (platykurtic). A kurtosis of exactly 3 corresponds to a normal distribution (mesokurtic)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Skewness and Kurtosis – When to Use Which?\n",
+        "\n",
+        "Beyond central tendency and spread, it is also important to understand the **shape of a distribution**. Two key measures for this are **skewness** and **kurtosis**.\n",
+        "\n",
+        "- **Skewness** measures the asymmetry of a distribution:  \n",
+        "  - A **skewness near 0** means the data is roughly symmetric (like a bell curve).  \n",
+        "  - **Positive skew** means the right tail is longer (e.g., Titanic fares: many passengers paid small amounts, but a few paid very high amounts).  \n",
+        "  - **Negative skew** means the left tail is longer (rare, but can occur in age if most passengers are older but a few very young drag the tail down).  \n",
+        "  Skewness is useful when you need to decide whether to apply transformations (like log-transforming highly skewed variables) before modeling.\n",
+        "\n",
+        "- **Kurtosis** measures the \"tailedness\" or concentration of data in the extremes compared to a normal distribution:  \n",
+        "  - **Normal distribution** has kurtosis ≈ 0 (if using Fisher’s definition) or 3 (if using Pearson’s).  \n",
+        "  - **High kurtosis (leptokurtic)** means heavy tails and more outliers (Titanic fares again show this).  \n",
+        "  - **Low kurtosis (platykurtic)** means light tails and fewer outliers than normal.  \n",
+        "  Kurtosis is useful for assessing the presence of outliers and how extreme values may influence analysis.\n",
+        "\n",
+        "### When to Use Which?\n",
+        "- Use **skewness** when you want to check for asymmetry and decide on transformations to make data more normal.  \n",
+        "- Use **kurtosis** when evaluating whether outliers are likely and how “peaked” or “flat” your distribution is compared to normal.  \n",
+        "- Both are most useful in **EDA before modeling**, especially when considering regression, correlation, or machine learning methods that assume normality.  \n",
+        "\n",
+        "In practice, **skewness highlights direction of imbalance**, while **kurtosis highlights the weight of the tails**. Together, they help you understand if your data matches the assumptions of common statistical techniques or if adjustments are needed.\n"
+      ],
+      "metadata": {
+        "id": "cJWJMMMane45"
+      },
+      "id": "cJWJMMMane45"
     },
     {
       "cell_type": "markdown",
