--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -14,6 +14,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Previously…\n",
+        "\n",
+        "In the last sessions, we focused on the **hard but essential work** of data handling:  \n",
+        "- acquiring datasets from different sources,  \n",
+        "- cleaning messy values and duplicates,  \n",
+        "- preparing and transforming data into usable formats.  \n",
+        "\n",
+        "That stage often feels technical and sometimes tedious — but it builds the foundation for everything that follows.  \n",
+        "\n",
+        "Now, we shift to the part many find most **enjoyable and rewarding**: **exploring the data**.  \n",
+        "Through **visualizations, summaries, and pattern discovery**, we get to uncover the stories hidden inside the dataset. This is the essence of **Exploratory Data Analysis (EDA)**.  \n"
+      ],
+      "metadata": {
+        "id": "mBkQi1MjvgpR"
+      },
+      "id": "mBkQi1MjvgpR"
+    },
+    {
+      "cell_type": "markdown",
       "id": "db2edc7a",
       "metadata": {
         "id": "db2edc7a"
@@ -95,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "772e07ba",
       "metadata": {
         "colab": {
@@ -814,7 +834,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "f6dd810f",
       "metadata": {
         "colab": {
