--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "772e07ba",
       "metadata": {
         "colab": {
@@ -4418,6 +4418,45 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Understanding `groupby` in Pandas\n",
+        "\n",
+        "The `groupby` operation in **pandas** is one of the most powerful tools for summarizing and analyzing data.  \n",
+        "It works in three main steps, often described as **split–apply–combine**:\n",
+        "\n",
+        "1. **Split** – The data is divided into groups based on one or more keys (columns).  \n",
+        "   Example: splitting Titanic passengers by `sex` or `class`.  \n",
+        "\n",
+        "2. **Apply** – A function (such as `mean`, `sum`, `count`, `median`, `min`, `max`) is applied independently to each group.  \n",
+        "   Example: calculating the average fare for each class.  \n",
+        "\n",
+        "3. **Combine** – The results of these operations are combined into a new DataFrame or Series.  \n",
+        "   Example: a summary table showing mean fares per class.\n",
+        "\n",
+        "![https://www.w3resource.com/w3r_images/pandas-groupby-split-apply-combine.svg](https://www.w3resource.com/w3r_images/pandas-groupby-split-apply-combine.svg)\n",
+        "\n",
+        "Src: https://www.w3resource.com/w3r_images/pandas-groupby-split-apply-combine.svg\n",
+        "\n",
+        "### Why is `groupby` useful?\n",
+        "- It allows us to quickly compare groups (e.g., survival rates by sex).  \n",
+        "- It simplifies working with **aggregations across categories**.  \n",
+        "- It helps uncover patterns hidden in subsets of the data.  \n",
+        "\n",
+        "### Example (Titanic dataset)\n",
+        "```python\n",
+        "# Average survival rate by sex\n",
+        "titanic.groupby(\"sex\")[\"survived\"].mean()\n",
+        "\n",
+        "# Average fare and age by class\n",
+        "titanic.groupby(\"class\")[[\"fare\", \"age\"]].mean()\n"
+      ],
+      "metadata": {
+        "id": "zWjM_SPk11Yv"
+      },
+      "id": "zWjM_SPk11Yv"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "7c8bbba6",
@@ -5727,7 +5766,7 @@
         }
       },
       "id": "uavEecRdFRyl",
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5813,7 +5852,7 @@
         }
       },
       "id": "C1i8zzoWGDVR",
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6207,7 +6246,7 @@
         }
       },
       "id": "ftXLr-aAXBm7",
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6612,7 +6651,7 @@
         }
       },
       "id": "wI0Z6G36X5a8",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7011,7 +7050,7 @@
         "id": "5RUsUfnBXXwc"
       },
       "id": "5RUsUfnBXXwc",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7030,7 +7069,7 @@
         }
       },
       "id": "uW7veQh9XdlP",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7108,7 +7147,7 @@
         "id": "V9LvBn2yXn17"
       },
       "id": "V9LvBn2yXn17",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7137,7 +7176,7 @@
         }
       },
       "id": "T1AaTYz-Ynxq",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7177,7 +7216,7 @@
         }
       },
       "id": "x-NRf7DtZEai",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7231,7 +7270,7 @@
         }
       },
       "id": "eoI5Qp2MZsTz",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7260,7 +7299,7 @@
         }
       },
       "id": "NtH5EhASaJjB",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7300,7 +7339,7 @@
         }
       },
       "id": "uKJnGseSabk4",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7819,7 +7858,7 @@
         }
       },
       "id": "uWEzaX8TcZfH",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8213,7 +8252,7 @@
         }
       },
       "id": "jMP_QD3ncxs2",
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8242,7 +8281,7 @@
         }
       },
       "id": "2AwSJn1_c-em",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8348,7 +8387,7 @@
         }
       },
       "id": "VgVcNNnxcq5f",
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8479,7 +8518,7 @@
         }
       },
       "id": "3kL2n2DXd1F8",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8840,7 +8879,7 @@
         }
       },
       "id": "tIJw44O1eX-J",
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9186,7 +9225,7 @@
         "id": "NKJqsKXJeK1h"
       },
       "id": "NKJqsKXJeK1h",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9224,7 +9263,7 @@
         }
       },
       "id": "PNORQyJhe_V3",
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9262,7 +9301,7 @@
         }
       },
       "id": "Vh1ewcxagheS",
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9319,7 +9358,7 @@
         }
       },
       "id": "gWmJbvGZfaUg",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
